<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tvid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="20sp"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/tvnombreresult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20sp"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/tvcorreoresult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="20sp"
            android:layout_gravity="center"/>



        <TextView
            android:id="@+id/tvpassresult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvlugardeviaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lugar"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvcantidadpersonas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad"
            android:textSize="20sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnInicio"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

</FrameLayout>